src/driver/tests/fixtures/access_list_via_float/access_list_via_float.ir.actual
MAIN () {
block0:
  t0 = NEW_LIST
  t1 = 1
  t2 = 0
  t0[t2] = t1
  t3 = 2
  t0[t1] = t3
  t5 = 3
  t0[t3] = t5
  t8 = 1.5
  t9 = t0[t8]
  PRINT t9
  t11 = null
  RETURN t11

}
